--- a/form.html
+++ b/form.html
@@ -87,12 +87,12 @@
 				</p>
 				<p>
 					<label>
-						К-во билетов:
+						K-во билетов:
 						<input type="number" value="1">
 					</label>
 				</p>
 				<div>
-					<b>Дети</b>
+					<p><b>Дети</b></p>
 					<p>
 						<label>
 							<input type="radio" name="children" value="without_children" checked> Без детей
@@ -110,7 +110,7 @@
 					</p>
 				</div>
 				<div>
-					<b>Комфорт</b>
+					<p><b>Комфорт</b></p>
 					<p>
 						<label>
 							<input type="checkbox" name="add_legroom"> Больше места для ног
@@ -145,14 +145,12 @@
 						<input type="checkbox" name="add_insurance" checked> Мне нужна страховка
 					</label>
 				</p>
-				<p>
+				<div>
+					<p><b>Загрузите копию паспорта</b></p>
 					<label>
-						<p>
-							<b>Загрузите копию паспорта</b>
-						</p>
 						<input type="file" name="add_file">
 					</label>
-				</p>
+				</div>
 				<p>
 					<label>
 						<textarea name="information" cols="30" rows="10">Дополнительная информация</textarea>
