--- a/form.html
+++ b/form.html
@@ -92,7 +92,7 @@
 					</label>
 				</p>
 				<div>
-					<p><b>Дети</b></p>
+					<h4>Дети</h4>
 					<p>
 						<label>
 							<input type="radio" name="children" value="without_children" checked> Без детей
@@ -110,7 +110,7 @@
 					</p>
 				</div>
 				<div>
-					<p><b>Комфорт</b></p>
+					<h4>Комфорт</h4>
 					<p>
 						<label>
 							<input type="checkbox" name="add_legroom"> Больше места для ног
