--- a/form.html
+++ b/form.html
@@ -146,7 +146,7 @@
 					</label>
 				</p>
 				<div>
-					<p><b>Загрузите копию паспорта</b></p>
+					<h4>Загрузите копию паспорта</h4>
 					<label>
 						<input type="file" name="add_file">
 					</label>
